@@ -284,13 +284,10 @@ public abstract class AbstractPackageMojo extends AbstractXpMojo {
     // Pack bootstrap
     try {
       Map<String, String> entries= new HashMap<String, String>();
-      entries.put("lang.base.php", "lib/bootstrap/lang.base.php");
-      ArchiveUtils.copyArchiveEntries(coreArtifact, this.archiver, entries);
-
-      entries.clear();
-      entries.put("tools/class.php", "lib/bootstrap/tools/class.php");
-      entries.put("tools/web.php", "lib/bootstrap/tools/web.php");
-      entries.put("tools/xar.php", "lib/bootstrap/tools/xar.php");
+      entries.put("tools/lang.base.php", "lib/bootstrap/tools/lang.base.php");
+      entries.put("tools/class.php",     "lib/bootstrap/tools/class.php");
+      entries.put("tools/web.php",       "lib/bootstrap/tools/web.php");
+      entries.put("tools/xar.php",       "lib/bootstrap/tools/xar.php");
       ArchiveUtils.copyArchiveEntries(coreArtifact, this.archiver, entries);
 
     } catch (IOException ex) {
